--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -2,47 +2,67 @@
 @import 'bootswatch/dist/flatly/variables';
 @import 'bootstrap/scss/variables';
 
-/* ==========================================================================
-Navbar
-========================================================================== */
-
-.navbar-version {
-  font-size: 0.65em;
-  color: $navbar-dark-color;
-}
-
-.profile-image {
-  height: 1.75em;
-  width: 1.75em;
-}
+$boardroom-green: #4a8c40;
 
 .navbar {
-  padding: 0.2rem 1rem;
-  .dropdown-item.active,
-  .dropdown-item.active:focus,
-  .dropdown-item.active:hover {
-    background-color: $dark;
+  height: 120px !important;
+  min-height: 120px !important;
+  padding: 0 2rem !important;
+  background-color: #ffffff !important;
+  display: flex !important;
+  align-items: center !important;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05) !important;
+
+  .container-fluid {
+    height: 100% !important;
+    display: flex !important;
+    align-items: center !important;
   }
 
-  a.nav-link {
-    font-weight: 400;
+  .navbar-brand.logo {
+    height: 100px !important;
+    width: 320px !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    display: flex !important;
+    align-items: center !important;
   }
 
-  .navbar-toggler {
-    &:hover {
-      color: $navbar-dark-hover-color;
+  .logo-img {
+    height: 100% !important;
+    width: 100% !important;
+    display: inline-block !important;
+    background: url('../../../content/images/logo-boardroom.png') no-repeat center left !important;
+    background-size: contain !important;
+  }
+
+  .navbar-nav {
+    height: 100% !important;
+    align-items: center !important;
+
+    .nav-link {
+      color: #444444 !important;
+      font-weight: 700;
+      font-size: 18px !important;
+      height: 120px !important;
+      display: flex !important;
+      align-items: center !important;
+
+      fa-icon {
+        color: $boardroom-green !important;
+        font-size: 1.3rem;
+        margin-right: 8px;
+      }
     }
   }
 }
 
-/* ==========================================================================
-Logo styles
-========================================================================== */
-.logo-img {
-  height: 45px;
-  width: 45px;
-  display: inline-block;
-  vertical-align: middle;
-  background: url('/content/images/logo-jhipster.png') no-repeat center center;
-  background-size: contain;
+.navbar-version {
+  display: none !important;
+}
+
+.profile-image {
+  height: 45px !important;
+  width: 45px !important;
+  border: 2px solid $boardroom-green !important;
 }
