--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -46,7 +46,7 @@
             />
 
             @let loginRef = registerForm.get('login')!;
-            @if (loginRef.invalid && (loginRef.dirty || loginRef.touched)) {
+            @if (loginRef.invalid && (loginRef.dirty || loginRef.touched === true)) {
               <div>
                 @if (loginRef?.errors?.required) {
                   <small class="form-text text-danger">Il nome utente è obbligatorio.</small>
@@ -65,6 +65,26 @@
                 }
               </div>
             }
+          </div>
+
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label class="form-label" for="firstName">Nome</label>
+              <input type="text" class="form-control" id="firstName" name="firstName" formControlName="firstName" placeholder="Nome" />
+              @let firstNameRef = registerForm.get('firstName')!;
+              @if (firstNameRef.invalid && (firstNameRef.dirty || firstNameRef.touched)) {
+                <div><small class="form-text text-danger">Il nome è obbligatorio.</small></div>
+              }
+            </div>
+
+            <div class="col-md-6 mb-3">
+              <label class="form-label" for="lastName">Cognome</label>
+              <input type="text" class="form-control" id="lastName" name="lastName" formControlName="lastName" placeholder="Cognome" />
+              @let lastNameRef = registerForm.get('lastName')!;
+              @if (lastNameRef.invalid && (lastNameRef.dirty || lastNameRef.touched)) {
+                <div><small class="form-text text-danger">Il cognome è obbligatorio.</small></div>
+              }
+            </div>
           </div>
 
           <div class="mb-3">
@@ -101,6 +121,36 @@
             }
           </div>
 
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label class="form-label" for="numeroDiTelefono">Telefono</label>
+              <input
+                type="text"
+                class="form-control"
+                id="numeroDiTelefono"
+                name="numeroDiTelefono"
+                formControlName="numeroDiTelefono"
+                placeholder="+39 333..."
+              />
+              @let phoneRef = registerForm.get('numeroDiTelefono')!;
+              @if (phoneRef.invalid && (phoneRef.dirty || phoneRef.touched)) {
+                <div><small class="form-text text-danger">Il telefono è obbligatorio.</small></div>
+              }
+            </div>
+
+            <div class="col-md-6 mb-3">
+              <label class="form-label" for="nomeAzienda">Nome Azienda (Opzionale)</label>
+              <input
+                type="text"
+                class="form-control"
+                id="nomeAzienda"
+                name="nomeAzienda"
+                formControlName="nomeAzienda"
+                placeholder="Azienda"
+              />
+            </div>
+          </div>
+
           <div class="mb-3">
             <label class="form-label" for="password">Nuova password</label>
             <input
@@ -130,7 +180,7 @@
               </div>
             }
 
-            <jhi-password-strength-bar [passwordToCheck]="passwordRef.value" />
+            <jhi-password-strength-bar [passwordToCheck]="registerForm.controls.password.value" />
           </div>
 
           <div class="mb-3">
