Completato nome sito:BoardRoom e attivazione automatica utenti

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,59 +1,32 @@
-<div class="row">
-  <div class="col-md-3">
-    <span class="hipster img-fluid rounded"></span>
+<div class="home-container">
+  <div class="container text-center hero-section">
+    <h1 class="display-5 fw-bold mt-3">Eventi in programma</h1>
+    <p class="subtitle-verde">Scorri per vedere i prossimi eventi in BoardRoom</p>
   </div>
 
-  <div class="col-md-9">
-    <h1 class="display-4"><span>Benvenuto, Java Hipster!</span> (Boardroom)</h1>
+  <div class="container carousel-wrapper">
+    <div class="fake-arrow left"><i class="bi bi-chevron-left"></i></div>
+    <div class="fake-arrow right"><i class="bi bi-chevron-right"></i></div>
 
-    <p class="lead">Questa è la tua home page</p>
-
-    <div>
-      @if (account() !== null) {
-        <div class="alert alert-success">
-          @if (account(); as accountRef) {
-            <span id="home-logged-message">Autenticato come &quot;{{ accountRef.login }}&quot;.</span>
-          }
-        </div>
-      } @else {
-        <div class="alert alert-warning">
-          <span>Se vuoi </span>
-          <a class="alert-link" (click)="login()">accedere</a
-          ><span
-            >, puoi provare gli account di default: <br />
-            - Amministratore (user = &quot;admin&quot; e la password = &quot;admin&quot;) <br />
-            - utente (user = &quot;user&quot; e la password = &quot;user&quot;)</span
-          >
-        </div>
-
-        <div class="alert alert-warning">
-          <span>Non hai ancora un account?</span>&nbsp;
-          <a class="alert-link" routerLink="/account/register">Crea un account</a>
+    <div class="event-scroll-container">
+      @for (evento of eventiFinti; track evento.titolo) {
+        <div class="event-card-item">
+          <div class="card event-card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">{{ evento.titolo }}</h5>
+              <p class="sala-text">{{ evento.sala }}</p>
+              <div class="date-badge">
+                <span class="event-date">20 Febbraio 2026</span>
+                <p class="event-time">{{ evento.ora }}</p>
+              </div>
+              <div class="card-footer-custom">
+                <button class="btn btn-price">€ {{ evento.prezzo }}</button>
+                <button class="btn btn-details">Dettagli</button>
+              </div>
+            </div>
+          </div>
         </div>
       }
     </div>
-
-    <p>In caso di domande su JHipster:</p>
-
-    <ul>
-      <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer">Homepage JHipster</a></li>
-      <li>
-        <a href="https://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener noreferrer">JHipster su Stack Overflow</a>
-      </li>
-      <li>
-        <a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener noreferrer"
-          >JHipster tracciamento errori</a
-        >
-      </li>
-      <li>
-        <a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">Chat room pubblica di JHipster</a>
-      </li>
-      <li><a href="https://twitter.com/jhipster" target="_blank" rel="noopener noreferrer">segui &#64;jhipster su Twitter</a></li>
-    </ul>
-
-    <p>
-      <span>Se ti piace JHipster, non dimenticarti di darci una stella su</span>
-      <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">GitHub</a>!
-    </p>
   </div>
 </div>
