--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -6,11 +6,11 @@
 
     <form (ngSubmit)="login()" [formGroup]="loginForm">
       <div class="input-group">
-        <input type="email" class="figma-input" placeholder="Email" formControlName="username" />
+        <input type="Username" class="figma-input" placeholder="Username" formControlName="username" />
       </div>
 
       <div class="input-group">
-        <input type="password" class="figma-input" placeholder="Password" formControlName="password" />
+        <input type="Password" class="figma-input" placeholder="Password" formControlName="password" />
       </div>
 
       <button type="submit" class="figma-btn">Accedi</button>
