completata Prenota sala

--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -11,3 +11,8 @@
 
   <jhi-footer />
 </div>
+@if (loadingService.isLoading()) {
+  <div class="loading-overlay">
+    <div class="minimal-spinner"></div>
+  </div>
+}
